# CPP2P

./: CMakeLists.txt  README.md
bots/: testbot.lua
header-files/: Client.h  Command.h  Master.h  User.h
source-files/: Client.cpp  Command.cpp  Master.cpp  User.cpp  main.cpp
